# pdf-forge

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml
.github/workflows/: ci.yml
docs/: go-bindings.md  templating.md
examples/go/: main.go
include/: rpdf.h
output/: all_elements_layout.json  invoice_layout.json  multipage_layout.json  report_layout.json  styled_layout.json
src/: dom.rs  ffi.rs  fonts.rs  layout.rs  layout_config.rs  lib.rs  main.rs  pagination.rs  pipeline.rs  render.rs  style.rs  templates.rs
templates/: report.html  styled.html
tests/: integration_tests.rs
